--- a/views/reports/invoice.ejs
+++ b/views/reports/invoice.ejs
@@ -30,69 +30,56 @@
 <body>
     <div style="margin: 10px;">
         <section class="content invoice">
-            <!-- title row -->
-            <div class="row">
-                <div class="col-xs-12 invoice-header">
-                    <h1>
-                        <!--<i class="fa fa-globe"></i>-->
-                        <%= invoiceLabel %>
-                            <small class="pull-right"><%= dateLabel %>: <%= dateValue %></small>
-                    </h1>
-                </div>
-                <div class="col-xs-12">
-                    <%= invoiceLabel %> #<%= invoiceReference %>
-                </div>
-                <!-- /.col -->
-            </div>
             <!-- info row -->
-            <div class="row invoice-info">
-                <div class="col-md-2">
-                    <br>
-                    <img src="<%= hotelLogoSrcValue %>"/>
-                </div>
-                <div class="col-sm-4 invoice-col">
-                    <br>
+            <div class="row invoice-info" style="padding-top: 15px;">
+                <div class="col-sm-5 invoice-col">
                     <%= fromLabel %>
                         <address>
                             <strong><%= hotelNameValue %></strong>
+                            <img src="<%= hotelLogoSrcValue %>" style="height:35px"/>
                             <br>
                             <%= hotelAddressFirstLineValue %>
-                                <br>
-                                <%= hotelAddressSecondLineValue %>
-                                    <br>
-                                    <%= hotelPhoneLabel %>:
-                                        <%= hotelPhoneValue %>
-                                            <br>
-                                            <%= hotelEmailLabel %>:
-                                                <%= hotelEmailValue %>
+                            <br>
+                            <%= hotelAddressSecondLineValue %>
+                            <br>
+                            <%= hotelPhoneLabel %>:
+                            <%= hotelPhoneValue %>
+                            <br>
+                            <%= hotelEmailLabel %>:
+                            <%= hotelEmailValue %>
                         </address>
                 </div>
                 <!-- /.col -->
                 <div class="col-sm-4 invoice-col">
-                    <br>
                     <%= toLabel %>
-                        <address>
-                            <strong><%= payerNameValue %></strong>
-                            <br>
-                            <%= payerAddressFirstLineValue %>
-                                <br>
-                                <%= payerAddressSecondLineValue %>
-                                    <br>
-                                    <%= payerPhoneLabel %>:
-                                        <%= payerPhoneValue %>
-                                            <br>
-                                            <%= payerEmailLabel %>:
-                                                <%= payerEmailValue %>
-                        </address>
+                    <address>
+                        <strong><%= payerNameValue %></strong>
+                        <br>
+                        <%= payerAddressFirstLineValue %>
+                        <br>
+                        <%= payerAddressSecondLineValue %>
+                        <br>
+                        <%= payerPhoneLabel %>:
+                        <%= payerPhoneValue %>
+                        <br>
+                        <%= payerEmailLabel %>:
+                        <%= payerEmailValue %>
+                    </address>
                 </div>
-                <!-- /.col -->
-                <div class="col-sm-2">
+                <div class="col-sm-3">
+                    <div class="row" style="height:25px">
+                        <div class="col-md-12" style="height:100%">
+                            <i style="position: absolute; right: 15px; bottom: 0;"><%= invoiceLabel %></i><br><br>
+                        </div>
+                    </div>
+                    <div class="row" style="height:40px">
+                        <div class="col-md-12" style="height:100%">
+                            <p style="position: absolute; top:10px; right:12px; bottom: 0; margin: 0; text-align: right;"><%= invoiceLabel %> <b><%= invoiceReference %></b><br><%= dateLabel %>: <b><%= dateValue %></b></p>
+                        </div>
+                    </div>
                 </div>
-                <!-- /.col -->
             </div>
-            <!-- /.row -->
 
-            <!-- Table row -->
             <div class="row">
                 <div class="col-xs-12 table">
                     <table class="table table-striped">
