--- a/views/external.ejs
+++ b/views/external.ejs
@@ -67,7 +67,7 @@
 	<main-layout-external></main-layout-external>
 	
 	<%if (!isDevelopmentEnvironment) {%>
-		<script src="/client/build/unitpal-external.min.js"></script>
+		<script src="/client/build/unitpal-external-1.0.0.min.js"></script>
 	<%}%>
 	
 </body>
