--- a/views/internal.ejs
+++ b/views/internal.ejs
@@ -74,7 +74,7 @@
 	<main-layout-internal></main-layout-internal>
 
 	<%if (!isDevelopmentEnvironment) {%>
-		<script src="/client/build/unitpal-internal.min.js"></script>
+		<script src="/client/build/unitpal-internal-1.0.0.min.js"></script>
 	<%}%>
 
 </body>
