--- a/assets/client/src/pages/external/pages/log-in/template/log-in-component.html
+++ b/assets/client/src/pages/external/pages/log-in/template/log-in-component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="getDefaultFormGroup()" (submit)="logIn()">
+<form [formGroup]="getDefaultFormGroup()">
 	<h1>{{ "Login to " | translate }} UnitPal</h1>
 	<div class="form-group">
 		<div class="input-group" [ngClass]="{'form-warning': controlIsInvalid('email')}">
@@ -13,7 +13,7 @@
 		<label class="form-warning"><small><i class="fa fa-info-circle"></i> {{ 'Insert your password' | translate }}</small></label>
 	</div>
 	<div>
-		<loading-button [isLoading]="isLoading" title="Log In"></loading-button>
+		<loading-button [isLoading]="isLoading" title="Log In" (didClick)="logIn()"></loading-button>
 		<br/>
 		<a class="reset_pass" [routerLink]="['/reset']">{{ 'Lost your password?' | translate }}</a>
 	</div>
