--- a/assets/client/src/pages/external/pages/reset-password/template/reset-password-component.html
+++ b/assets/client/src/pages/external/pages/reset-password/template/reset-password-component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="getDefaultFormGroup()" (submit)="resetPassword()">
+<form [formGroup]="getDefaultFormGroup()">
 	<h1>{{ "Reset Password" | translate }}</h1>
 	<div class="form-group">
 		<div class="input-group" [ngClass]="{'form-warning': controlIsInvalid('email')}">
@@ -7,7 +7,7 @@
 		<label class="form-warning"><small><i class="fa fa-info-circle"></i> {{ 'Invalid email' | translate }}</small></label>
 	</div>
 	<div>
-		<loading-button [isLoading]="isLoading" title="Reset Password"></loading-button>
+		<loading-button [isLoading]="isLoading" title="Reset Password" (didClick)="resetPassword()"></loading-button>
 	</div>
 	<div class="clearfix"></div>
 	<div class="separator">
