--- a/assets/client/src/pages/external/pages/sign-up/template/sign-up-component.html
+++ b/assets/client/src/pages/external/pages/sign-up/template/sign-up-component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="getDefaultFormGroup()" (submit)="signUp()">
+<form [formGroup]="getDefaultFormGroup()">
 	<h1>{{ "Create Account" | translate }}</h1>
 	
 	<div class="form-group">
@@ -38,7 +38,7 @@
 		<label class="form-warning"><small><i class="fa fa-info-circle"></i> {{ 'Enter your last name' | translate }}</small></label>
 	</div>
 	<div>
-		<loading-button [isLoading]="isLoading" title="Create Account"></loading-button>
+		<loading-button [isLoading]="isLoading" title="Create Account" (didClick)="signUp()"></loading-button>
 	</div>
 	<div class="clearfix"></div>
 	<div class="separator">
