--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/booking-operations/components/price-product-view/template/booking-price-product-editor.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/booking-operations/components/price-product-view/template/booking-price-product-editor.html
@@ -1,18 +1,31 @@
 <div class="col-xs-12 important-header padding-top-10px">
     <div class="row">
-        <div class="col-xs-12 col-sm-1 text-field">
+        <div class="col-xs-12 col-sm-1 text-field padding-top-5px">
             <p>{{'Price Product' | translate}}</p>
         </div>
-        <div class="col-xs-12 col-sm-4 field-value text-field">
-            <p>{{priceProductDO.name}}</p>
+        <div class="col-xs-12 col-sm-4">
+            <div class="row">
+                <div class="col-xs-8 field-value text-field padding-top-5px">
+                    <p>{{priceProductDO.name}}</p>
+                </div>
+                <div class="col-xs-4">
+                    <span class="pull-right edit-save-button-group-container">
+                        <span>
+                            <button type="button" class="btn btn-danger btn-block btn-xs uppercase" *ngIf="canChangePriceProduct" (click)="changePriceProduct()">
+                                <i class="fa unitpal-font">]</i> {{ 'Change' | translate }}
+                            </button>
+                        </span>
+                    </span>
+                </div>
+            </div>
         </div>
-        <div class="col-xs-12 col-sm-2">
+        <div class="col-xs-12 col-sm-2 padding-top-5px">
             <p>{{'Charge' | translate}}</p>
         </div>
-        <div class="col-xs-12 field-value text-field" [ngClass]="{'col-sm-5': !isPenaltyPrice, 'col-sm-2': isPenaltyPrice}">
+        <div class="col-xs-12 field-value text-field padding-top-5px" [ngClass]="{'col-sm-5': !isPenaltyPrice, 'col-sm-2': isPenaltyPrice}">
             <p><b>{{currencySymbolString}} {{totalPrice}}:</b> {{'Room' | translate}} {{currencySymbolString}}{{totalRoomPrice}} / {{ 'Others' | translate }} {{currencySymbolString}}{{totalOtherPrice}}</p>
         </div>
-        <div class="col-xs-12 col-sm-3 field-value text-field" *ngIf="isPenaltyPrice">
+        <div class="col-xs-12 col-sm-3 field-value text-field padding-top-5px" *ngIf="isPenaltyPrice">
             <span class="operational-important-field"> <i class="fa unitpal-font">+</i> {{'Penalty' | translate}}</span>
         </div>
     </div>
