#27 Integrated booking search on front end

--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/booking-operations/components/price-product-view/components/change-price-product/template/change-price-product-modal.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/booking-operations/components/price-product-view/components/change-price-product/template/change-price-product-modal.html
@@ -2,8 +2,8 @@
 	<button type="button" class="close" (click)="closeDialog()">&times;</button>
 	<h4 class="modal-title">{{ 'Select New Price Product' | translate }}</h4>
 </div>
-<div class="modal-body table-selection">
-	<existing-booking-search [searchInput]="bookingSearchInput" (onBookingCartItemVMSelected)="selectBookingCartItem($event)"></existing-booking-search>
+<div>
+	<existing-booking-search [searchInput]="bookingSearchInput" (onBookingCartItemVMSelected)="selectBookingCartItem($event)" class="modal-body table-selection"></existing-booking-search>
 </div>
 <div class="modal-footer">
 	<button [disabled]="!didSelectBookingCartItem" (click)="useSelectedBookingCartItem()" type="button" class="btn btn-primary">
