#2 moved VAT from booking confirmation to invoice

--- a/views/reports/invoice.ejs
+++ b/views/reports/invoice.ejs
@@ -38,6 +38,10 @@
                             <strong><%= hotelNameValue %></strong>
                             <img src="<%= hotelLogoSrcValue %>" style="height:35px"/>
                             <br>
+                            <p><b><%= hotelVatLabel %>:</b>
+                            <%= hotelVatValue %>
+                            </p>
+                            <br>
                             <%= hotelAddressFirstLineValue %>
                             <br>
                             <%= hotelAddressSecondLineValue %>
