--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/room-operations/components/booking-preview/template/room-booking-preview.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/room-operations/components/booking-preview/template/room-booking-preview.html
@@ -54,7 +54,7 @@
             <button type="button" class="btn btn-danger btn-block oneline-text" (click)="viewInvoice()"> 
                 <i class="fa unitpal-font">L</i> 
                 {{ 'Invoice' | translate }}
-                <small class="uppercase" *ngIf="!invoiceIsPaid">
+                <small class="uppercase">
                     ({{ 'Unpaid' | translate }})
                 </small>
             </button>
