--- a/assets/client/static-assets/css/unitpal.css
+++ b/assets/client/static-assets/css/unitpal.css
@@ -3706,6 +3706,10 @@ invoice-edit {
    background-color: rgb(251, 103, 8);
    color: white;
 }
+.table-invoice-payer.paid > tbody > tr.row-actions {
+   background-color: #9d9ca1;
+   color: white;
+}
 .table-invoice-payer > tbody > tr.row-actions > .customer-container {
    text-align: left;
 }
