--- a/views/reports/invoice.ejs
+++ b/views/reports/invoice.ejs
@@ -123,7 +123,9 @@
                                 <%= hotelVatLabel %>: <%= hotelVatValue %><br>
                                 <%= hotelAddressFirstLineValue %><br>
                                 <%= hotelAddressSecondLineValue %><br>
-                                <%= hotelContactLabel %>: <%= hotelContactValue %><br>
+                                <%if (hotelContactValue.length > 0) {%>
+                                    <%= hotelContactLabel %>: <%= hotelContactValue %><br>
+                                <%}%>
                             </td>
                             
                             <td width="45%">
