--- a/assets/client/static-assets/css/unitpal-print.css
+++ b/assets/client/static-assets/css/unitpal-print.css
@@ -4,6 +4,19 @@
     src: url(../fonts/UnitpalIcons.TTF);
 }
 
-body {
-  font-family: 'Roboto', sans-serif;
+* {
+    margin: 0;
+}
+html, body {
+    font-family: 'Roboto', sans-serif;
+    height: 100%;
+}
+.wrapper {
+    min-height: 100% !important;
+    height: auto !important; /* This line and the next line are not necessary unless you need IE6 support */
+    height: 100% !important;
+    margin: 0 auto -90px  !important; /* the bottom margin is the negative value of the footer's height */
+}
+.footer, .push {
+    height: 90px !important; /* .push must be the same height as .footer */
 }
