--- a/views/reports/invoice.ejs
+++ b/views/reports/invoice.ejs
@@ -13,9 +13,8 @@
     .invoice-box{
         max-width:800px;
         margin:auto;
-        padding:30px;
-        border:1px solid #eee;
-        box-shadow:0 0 10px rgba(0, 0, 0, .15);
+        padding-right: 30px;
+        padding-left: 30px;
         font-size:9px;
         line-height:18px;
         font-family: 'Roboto', sans-serif;
@@ -35,20 +34,6 @@
     
     .invoice-box table tr td:nth-child(2){
         text-align:right;
-    }
-    
-    .invoice-box table tr.top table td{
-        padding-bottom:20px;
-    }
-    
-    .invoice-box table tr.top table td.title{
-        font-size:27px;
-        line-height:15px;
-        color:#333;
-    }
-    
-    .invoice-box table tr.information table td{
-        padding-bottom:40px;
     }
     
     .invoice-box table tr.heading td{
@@ -91,44 +76,15 @@
 </head>
 
 <body>
-    <div class="invoice-box">
+    <div class="invoice-box wrapper">
+        <br><br>
         <table cellpadding="0" cellspacing="0">
             <tr class="top">
                 <td colspan="5">
                     <table>
                         <tr>
                             <td class="title">
-                                <img src="<%= hotelLogoSrcValue %>" style="width:100%; max-width:100px;"><br>
-                                <span style="font-size:14px; color:#333;"><%= hotelNameValue %></span><br>
-                                <span style="font-size:10px; color:#333;"><%= hotelWebsite %></span>
-                            </td>
-                            
-                            <td>
-                                <%= invoiceLabel %> : <%= invoiceReference %><br>
-                                <%= dateLabel %>: <%= dateValue %><br>
-                                <%if (addFieldValue1.length > 0) {%>
-                                    <%= addFieldName1 %>: <%= addFieldValue1 %><br>
-                                <%}%>
-                            </td>
-                        </tr>
-                    </table>
-                </td>
-            </tr>
-            
-            <tr class="information">
-                <td colspan="5">
-                    <table>
-                        <tr>
-                            <td>
-                                <%= hotelVatLabel %>: <%= hotelVatValue %><br>
-                                <%= hotelAddressFirstLineValue %><br>
-                                <%= hotelAddressSecondLineValue %><br>
-                                <%if (hotelContactValue.length > 0) {%>
-                                    <%= hotelContactLabel %>: <%= hotelContactValue %><br>
-                                <%}%>
-                            </td>
-                            
-                            <td width="45%">
+                                <br>
                                 <%= payerNameValue %><br>
                                 <%if (payerAddressFirstLineValue.length > 0) {%>
                                     <%= payerAddressFirstLineValue %><br>
@@ -138,6 +94,15 @@
                                 <%}%>
                                 <%if (payerContactValue.length > 0) {%>
                                     <%= payerContactLabel %>: <%= payerContactValue %><br>
+                                <%}%>
+                            </td>
+                            
+                            <td>
+                                <img src="<%= hotelLogoSrcValue %>" style="width:100%; max-width:130px;"><br>
+                                <%= invoiceLabel %> : <%= invoiceReference %><br>
+                                <%= dateLabel %>: <%= dateValue %><br>
+                                <%if (addFieldValue1.length > 0) {%>
+                                    <%= addFieldName1 %>: <%= addFieldValue1 %><br>
                                 <%}%>
                             </td>
                         </tr>
@@ -197,19 +162,42 @@
                    <%= totalLabel %>: <%= ccySymbol %><%= totalValue %>
                 </td>
             </tr>
-
-            <tr class="top">
+            <tr class="information">
                 <td colspan="5">
-                    <div style="text-align:center; width:100%; padding-top: 25px;">
-                        <p style="margin: auto;">
-                            <span style="font-size: 7px;">Generated from </span>
-                            <img src="<%= unitpalLogoSrcValue %>" style="height:13px;">
-                            <small><strong>Unit</strong>Pal</small>
-                        </p>
-                    </div>
+                    <table>
+                        <tr>
+                            <td>
+                                <%= hotelNameValue %> <br>
+                                <%= hotelWebsite %> <br>
+                                <%= hotelVatLabel %>: <%= hotelVatValue %><br>
+                                <%= hotelAddressFirstLineValue %><br>
+                                <%= hotelAddressSecondLineValue %><br>
+                                <%if (hotelContactValue.length > 0) {%>
+                                    <%= hotelContactLabel %>: <%= hotelContactValue %><br>
+                                <%}%>
+                            </td>
+                            <td width="45%">
+                            </td>
+                        </tr>
+                    </table>
+                </td>
+            </tr>
+
+            <tr class="top footer">
+                <td colspan="5">
+                    
                 </td>
             </tr>
         </table>
+    </div>
+    <div class="footer">
+        <div style="text-align:center; width:100%; padding-top: 25px;">
+            <p style="margin: auto;">
+                <span style="font-size: 7px;">Generated from </span>
+                <img src="<%= unitpalLogoSrcValue %>" style="height:13px;">
+                <small><strong>Unit</strong>Pal</small>
+            </p>
+        </div>
     </div>
 </body>
 </html>
