--- a/assets/client/src/pages/internal/containers/common/basic-info/payments-policies/main/template/basic-info-payments-policies-edit.html
+++ b/assets/client/src/pages/internal/containers/common/basic-info/payments-policies/main/template/basic-info-payments-policies-edit.html
@@ -3,11 +3,11 @@
 	<div class="row basic-info-form" *ngIf="!isLoading">
 		<div class="col-xs-12 col-md-4">
 			<label class="control-label">
-			<h3>{{ 'Default currency' | translate }}  </h3>
-			<small>{{ 'All rates and prices will be in the selected currency' | translate }}</small>
-		</label>
+				<h3>{{ 'Default currency' | translate }}  </h3>
+				<small>{{ 'All rates and prices will be in the selected currency' | translate }}</small>
+			</label>
 			<div class="form-group">
-				<div class="input-group" [ngClass]="{'form-warning': (!hotel.ccyCode && didSubmitForm)}">
+				<div class="input-group" [ngClass]="{'form-warning': (!hotel.ccyCode && didSubmitPage)}">
 					<select class="form-control" [ngModel]="hotel.ccyCode" (ngModelChange)="didChangeCurrencyCode($event)" name="hotelCcyCode">
 					<option value="" disabled>{{ 'Select a currency' | translate }}</option>
 					<option *ngFor="let currency of currencies.currencyList" [value]="currency.code">{{currency.code}} - {{currency.name}}</option>
@@ -20,7 +20,7 @@
 
 			<label class="control-label">Payment Methods</label>
 			<div class="well form-group">
-				<div class="input-group" [ngClass]="{'form-warning': (!didSelectPaymentMethod()&&didSubmitForm)}">
+				<div class="input-group" [ngClass]="{'form-warning': (!didSelectPaymentMethod()&&didSubmitPage)}">
 					<ul class="list-group checked-list-box">
 						<div class="checkbox" *ngFor="let paymentMethodVM of paymentMethods.paymentMethodList">
 							<label>
@@ -40,6 +40,13 @@
 
 		<div class="col-xs-12 col-md-4">
 			<basic-info-tax-list [ccyCode]="hotel.ccyCode" [taxType]="otherTaxType"></basic-info-tax-list>
+		</div>
+		<div class="col-md-4 col-xs-12 form-group" [formGroup]="getDefaultFormGroup()">
+			<label>{{ 'Additional Invoice Information' | translate }}</label>
+			<div class="input-group" [ngClass]="{'form-warning': controlIsInvalid('additionalInvoiceDetails')}">
+				<textarea class="form-control" placeholder="{{ 'e.g. Banking details (iban, swift code) etc.' | translate}}" formControlName="additionalInvoiceDetails"></textarea>
+			</div>
+			<label class="form-warning"><small><i class="fa fa-info-circle"></i> {{ 'No more than 2000 characters' | translate }}</small></label>
 		</div>
 		<div *ngIf="!isLoading && canAutoSave" class="col-xs-12 col-md-offset-9 col-md-3">
 			<button type="button" class="btn btn-primary btn-block" (click)="savePaymentsAndPolicies()">
