--- a/views/reports/invoice.ejs
+++ b/views/reports/invoice.ejs
@@ -199,7 +199,7 @@
                         <%= ccySymbol %><%= itemVM.subtotal %>
                     </td>
                     <td>
-                        <%= ccySymbol %><%= itemVM.vat %>
+                        <%= ccySymbol %><%= itemVM.vat %> / <%= itemVM.varPercentage %>%
                     </td>
                 </tr>
             <% }); %>
